# llm_project

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/core/: config.py  graph.py  redis.py
app/core/db/: db_sync.py  session.py
app/models/db/: chat_session.py
app/models/schemas/: chat_session.py
app/routers/: __init__.py  chat_session.py
